--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,39 +1,48 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# Daily AutoScout24 Scraper - Automated Data Collection
 
-name: Python application
+name: AutoScout24 Daily Scraper
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  schedule:
+    # Runs daily at 4:00 AM UTC
+    - cron: '0 4 * * *'
+  workflow_dispatch: # Manual trigger
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
-  build:
-
+  scrape:
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v4
+        
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
+        pip install -r scrapper/requirements.txt
+        
+    - name: Run Scraper
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+        cd scrapper
+        python3 autoscout_luxembourg_scraper.py --multi-model vehicle_models.csv --scrape-all --delay 3
+        
+    - name: Commit and push data
       run: |
-        pytest
+        git config --local user.email "action@github.com"
+        git config --local user.name "AutoScout24 Scraper Bot"
+        
+        git add scrapper/data/
+        
+        if ! git diff --cached --quiet; then
+          git commit -m "🤖 Daily scraper update - $(date '+%Y-%m-%d %H:%M UTC')"
+          git push
+        else
+          echo "No changes to commit"
+        fi
